Fix for Navbar bug stretching up and down

--- a/dashboard-website/mortgage_dashboard/frontend/src/App.css
+++ b/dashboard-website/mortgage_dashboard/frontend/src/App.css
@@ -2,20 +2,20 @@ body{
   /*font-size: 13px;*/
 }
 .App {
-  /*display: grid; */
+  /*display: grid;
   background: white;
- /* grid-template: 10% 1fr 10%/20% 1fr;
+  grid-template: 10% 1fr 10%/20% 1fr;
   height: 100vh;
   width: 100vw; */
 }
 .Header{
-  grid-column: 2/none;
-  grid-row: 1/1;
+ /* grid-column: 2/none;
+  grid-row: 1/1; */
 /**  background: #2f5496; **/
 }
 .Content{
-  grid-column: 2/2;
-  grid-row: 2/2;
+  /*grid-column: 2/2;
+  grid-row: 2/2;*/
 }
 .Footer{
   grid-column: 1/ none;
@@ -31,11 +31,12 @@ body{
   margin: 0; 
   background-color: rgba(13, 57, 122, 1);
   color: white;
-  display: flex;
   justify-content: space-between;
-  align-items: stretch;
+  align-items: static;
+  display: flex; 
   gap: 3rem;
   padding: 0 1rem; 
+  z-index: 4; 
 }
 
 .NavbarMenu {
