--- a/dashboard-website/mortgage_dashboard/frontend/src/components/RecentLeads.css
+++ b/dashboard-website/mortgage_dashboard/frontend/src/components/RecentLeads.css
@@ -28,8 +28,7 @@ ol{
 }
 
 .RecentLeadsTitle{
-  background: darkblue;
-  font-size: 20px;
+  background: rgba(13, 57, 122, 1);
   font-weight: bold;
   color: white;
 }
